@@ -470,3 +470,10 @@ Feature: Multi Elements
      And the title for file field 1 should be "File Field 1"
      And the title for file field 2 should be "File Field 2"
      And the title for file field 3 should be "File Field 3"
+
+   Scenario: Selecting all divs using a block instead of an identifier
+     When I select the divs using a block
+     Then I should have 3 divs
+     And the text of div 1 should be "Div 1"
+     And the text of div 2 should be "Div 2"
+     And the text of div 3 should be "Div 3"
