@@ -1299,9 +1299,9 @@ module Druid
      :paragraphs,
      :labels,
      :file_fields].each do |method_name|
-      define_method(method_name) do |name, identifier, &block|
+      define_method(method_name) do |name, identifier=nil, &block|
         define_method("#{name}_elements") do
-          return call_block(&block) if block_given?
+          return call_block(&block) unless block.nil?
           self.send "#{method_name.to_s}_for", identifier.clone
         end
       end
